--- a/.travis.yml
+++ b/.travis.yml
@@ -16,16 +16,16 @@ env:
 
 before_install:
   # Fetch pandoc and pandoc-citeproc binaries
-  - wget https://github.com/jgm/pandoc/releases/download/1.15.0.5/pandoc-1.15.0.5-1-amd64.deb && ar p pandoc-1.15.0.5-1-amd64.deb data.tar.gz | tar zx
+  - wget https://github.com/jgm/pandoc/releases/download/2.1.1/pandoc-2.1.1-1-amd64.deb && ar p pandoc-2.1.1-1-amd64.deb data.tar.xz | tar xJ
   # Install TeX Live
-  - sudo add-apt-repository -y ppa:texlive-backports/ppa
   - sudo apt-get update -qq
-  - sudo apt-get install texlive-xetex texlive-latex-recommended texlive-latex-extra
-  - sudo apt-get install texlive-fonts-recommended texlive-fonts-extra
-  - sudo apt-get install texlive-science
+  - sudo apt-get install texlive-xetex texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra  texlive-science
   # Install fonts
   - sudo apt-get install lmodern
 
 # Attempt to create a PDF
 script:
   - make pdf
+  - make tex
+  - make docx
+  - make html
